- updated readme - fixed nav, head responsive - removed user select - hidden the overflow (should fix scroll showing up on mobile)

--- a/static/global.css
+++ b/static/global.css
@@ -1,3 +1,11 @@
+:root {
+	overflow: hidden;
+	user-select: none;
+	-ms-user-select: none;
+	-moz-user-select: none;
+	-webkit-user-select: none;
+}
+
 body {
 	margin: 0;
 	font-family: "Roboto", sans-serif;
